test/files/pos/t10418_bounds.scala
class Test {
  def foo(c: java.util.Collection[String]): Unit = {
    c.removeIf(x => true)
  }
}
